compiler/out/python.txt
  File "tests/test12_fail.py", line 1
    print print
              ^
SyntaxError: invalid syntax
